# adv_mla_lab_4

./: Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: age_ord.joblib  checkup_ord.joblib  health_ord.joblib  ohe.joblib  scaler.joblib  sgd.joblib  sgd_pipeline.joblib
notebooks/: 1_baseline.ipynb  2_tf_callbacks.ipynb
